fix: left align crop titles

--- a/client/styles/cropper-container.css
+++ b/client/styles/cropper-container.css
@@ -6,5 +6,6 @@
 }
 
 .cropper-container .crop-channel--title {
-	text-align: center;
+	font-size: 1.625em;
+	line-height: 1.5em;
 }
